[package]
name = "oscilloscope"
version = "0.1.0"
authors = ["NarcissusTu <763030205@qq.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "1.0.0", features = ["defmt"] }
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
defmt = "1.0.0"
defmt-rtt = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f401", "rtic1", "defmt"  ]


[build-dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
